# local-morph

./: .firebaserc  README.md  index.html  package-lock.json  package.json
native/: Cargo.toml
native/assets/: original.ff
native/src/: image_converter.rs  lib.rs
public/: robots.txt
scripts/: build-wasm.mjs  build.sh  build_wasm.sh  prerender.mjs
src/: App.css  App.tsx  entry-ssr.tsx  formats.ts  index.css  main.tsx
